# 42_ft_linear_regression

./: data.cs2v  gradient.csv  predict.py  trainer.py  util.py  visu.py
linear_regression/: Cargo.toml
linear_regression/src/: lib.rs  main.rs
