[package]
name = "linear_regression"
version = "0.1.0"
authors = ["wescande <wescande@student.42.fr>"]

[dependencies]
clap = "2.30.0"
text_io = "0.1.7"
indicatif = "0.9.0"
console = "0.6.1"
gnuplot = "0.0.24"
rustc-serialize = "0.3.24"
bincode = "1.0.0"
serde_derive = "1.0.27"
serde = "1.0"
colored = "1.6"
csv = "1.0.0-beta.5"



